# duckddns-app

./: README.md  install_service_linux.sh  install_service_win.bat  pyproject.toml
src/duckddns_app/: config_manager.py  duck_dns_updater.py  ip_utils.py
